Fix button wrapping at mq-l

--- a/app/assets/stylesheets/components/_category_filter.scss
+++ b/app/assets/stylesheets/components/_category_filter.scss
@@ -9,7 +9,7 @@
 }
 
 .category-filter__list-item {
-  @extend %type-medium;
+  @extend %type-footer;
   background-color: $color-filter-background;
   margin-bottom: 0;
 
